force-app/main/default/objects/LabOrder_Hl7_Results_Tests_Info__c/LabOrder_Hl7_Results_Tests_Info__c.object-meta.xml
<CustomObject>
    <label>LabOrder Hl7 Results Tests Info</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>LabOrder Hl7 Results Tests Info ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LabOrder Hl7 Results Tests Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>