force-app/main/default/objects/LabOrder_Hl7_Results_Tests_Info__c/fields/Accession_Number__c.field-meta.xml
<CustomField>
    <fullName>Accession_Number__c</fullName>
    <label>Accession Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>