force-app/main/default/objects/LabOrder_Hl7_Results_Tests_Info__c/fields/Filler_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Filler_Order_Number__c</fullName>
    <label>Filler Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>