force-app/main/default/objects/LabOrder_Hl7_Results_Tests_Info__c/fields/Lab_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Lab_Order_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lab Order Id</label>
    <referenceTo>Lab_Order__c</referenceTo>
    <relationshipName>Test_Results</relationshipName>
    <type>Lookup</type>
</CustomField>