force-app/main/default/objects/LabOrder_Hl7_Results_Tests_Info__c/fields/LabOrder_HL7_Results_ID__c.field-meta.xml
<CustomField>
    <fullName>LabOrder_HL7_Results_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LabOrder_HL7_Results_ID</label>
    <referenceTo>HL7__c</referenceTo>
    <relationshipName>Test_Results</relationshipName>
    <type>Lookup</type>
</CustomField>