force-app/main/default/objects/LabOrder_Hl7_Results_Tests_Info__c/fields/Observation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Observation_Date_Time__c</fullName>
    <label>Observation_Date_Time</label>
    <type>DateTime</type>
</CustomField>