force-app/main/default/objects/LabOrder_Hl7_Results_Tests_Info__c/fields/Ordering_Provider__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Provider__c</fullName>
    <label>Ordering Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>