force-app/main/default/objects/LabOrder_Hl7_Results_Tests_Info__c/fields/Placer_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Placer_Order_Number__c</fullName>
    <label>Placer Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>