force-app/main/default/objects/LabOrder_Hl7_Results_Tests_Info__c/fields/Regional_lab_hospital_identifier__c.field-meta.xml
<CustomField>
    <fullName>Regional_lab_hospital_identifier__c</fullName>
    <label>Regional lab/hospital identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>