force-app/main/default/objects/LabOrder_Hl7_Results_Tests_Info__c/fields/Result_Profile_Description__c.field-meta.xml
<CustomField>
    <fullName>Result_Profile_Description__c</fullName>
    <label>Result Profile Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>