force-app/main/default/objects/LabOrder_Hl7_Results_Tests_Info__c/fields/Result_Status__c.field-meta.xml
<CustomField>
    <fullName>Result_Status__c</fullName>
    <label>Result Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>