force-app/main/default/objects/LabOrder_Hl7_Results_Tests_Info__c/fields/Results_RptStatus_Change_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Results_RptStatus_Change_Date_Time__c</fullName>
    <label>Results Rpt/Status Change Date Time</label>
    <type>DateTime</type>
</CustomField>