force-app/main/default/objects/LabOrder_Hl7_Results_Tests_Info__c/fields/Set_ID__c.field-meta.xml
<CustomField>
    <fullName>Set_ID__c</fullName>
    <label>Set ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>