force-app/main/default/objects/LabOrder_Hl7_Results_Tests_Info__c/fields/Specimen_Received_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Specimen_Received_Date_Time__c</fullName>
    <label>Specimen Received Date Time</label>
    <type>DateTime</type>
</CustomField>