force-app/main/default/objects/LabOrder_Hl7_Results_Tests_Info__c/fields/Specimen_Source__c.field-meta.xml
<CustomField>
    <fullName>Specimen_Source__c</fullName>
    <label>Specimen Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>