force-app/main/default/objects/LabOrder_Hl7_Results_Tests_Info__c/fields/Test_Result_Id__c.field-meta.xml
<CustomField>
    <fullName>Test_Result_Id__c</fullName>
    <label>Test Result Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>