force-app/main/default/objects/LabOrder_Hl7_Results_Tests_Info__c/fields/Universal_Service_ID__c.field-meta.xml
<CustomField>
    <fullName>Universal_Service_ID__c</fullName>
    <label>Universal_Service_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>