force-app/main/default/objects/LabOrder_Hl7_Results_Tests_Info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lab_Order_Id__c</columns>
    <columns>LabOrder_HL7_Results_ID__c</columns>
    <columns>Test_Result_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>